feat: implement setting api (#438)
